--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tiptap/extension-link": "^3.2.1",
+    "@tiptap/extension-placeholder": "^3.2.1",
+    "@tiptap/extension-underline": "^3.2.1",
+    "@tiptap/pm": "^3.2.1",
+    "@tiptap/react": "^3.2.1",
+    "@tiptap/starter-kit": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "latest",
@@ -23,6 +29,7 @@
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "zod": "latest"
